--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -56,6 +56,10 @@
 
                 <input type="hidden" name="rating" id="rating" required>
 
+                <label>Add Comment</label>
+                <textarea name="comment" class="form-control mb-3" placeholder="Write your feedback here..."
+                    required></textarea>
+
                 <button class="btn btn-primary">Submit</button>
 
             </form>
