--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -41,6 +41,11 @@
                     <option>Mall</option>
                     <option>Inshots</option>
                     <option>Wt Winds Website</option>
+                    <option>E-commerce</option>
+                    <option>Netflix</option>
+                    <option>Spotify</option>
+                    <option>LIC Policy</option>
+        
                 </select>
 
                 <label>Date</label>
